2004-05-10  Andy Wingo  <wingo@pobox.com>

	* Makefile.am (libguile_gnome_gw_*_la_LIBADD): Link all these to
	the real gobject module, not the -gw- module.

2004-04-18  Andy Wingo  <wingo@pobox.com>

	* graphical-repl.scm (install-history-handlers): Fix the
	long-standing bug in history-up and history-down. Load and save
	history files like ice-9/readline.scm does. Position the cursor at
	the end of the new text. Yay.
	(initialize for the entry): Lots of simplifications. Don't know
	why it was so complicated before.

	* Makefile.am (libguile_gnome_gw_gtk_la_CFLAGS): Temporarily
	remove -DGTK_DISABLE_DEPRECATED until the trunk is synced to
	Gtk+-2.4.

	* guile-gtk-tree-model.c (guile-gtk-generic-tree-model-get-flags):
	Allow the implementation to return #f for on-get-flags.

2004-04-03  Andreas Rottmann  <a.rottmann@gmx.at>

	* Makefile.am (libguile_gnome_gw_gtk_la_CFLAGS): Added -O0, to
	keep gcc from eating loads of memory.
	
	* Makefile.am (libguile_gnome_gw_gtk_la_CFLAGS): Removed
	-DGTK_DISABLE_DEPRECATED.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gtk-support.c (_wrap_gtk_tree_model_iter_children): Return a
	list of all children instead of the first sibling. Makes it
	slower, but integrates better with higher-level procedures like
	map and for-each.
	(_wrap_gtk_tree_model_iter_parent): New wrapper.

	* glade-support.c (handle_read_error): New function.
	(connect_many): Use scm_internal_catch with handle_read_error
	around scm_c_read_string.

2004-01-13  Andy Wingo  <wingo@pobox.com>

	* generics.scm: Removed. All functions added directly to gtk.scm.

2003-12-13  Andreas Rottmann  <a.rottmann@gmx.at>

	* Makefile.am (GDKMODULES): Added gdk-event.scm.

2003-12-03  Andy Wingo  <wingo@pobox.com>

	* gdk-support.c (gdk_event_to_event_struct): Wrap button and
	crossing events.

2003-11-25  Andy Wingo  <wingo@pobox.com>

	* gtk-support.[ch]: Added accessors for the ok and cancel buttons
	in file selections. Note that this API will be deprecated in
	Gtk+-2.4.
